--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="imagen">
-            <img src="imagenes/img-final.png" alt="persona"><i class="bi bi-asterisk fondo"></i>
+            <img src="imagenes/img-final.png" alt="persona">
         </div>
         <div class="diagonal">
             <h3>design <i class="bi bi-sun-fill sol"></i> branding <i class="bi bi-sun-fill sol"></i> development<i class="bi bi-sun-fill sol"></i> strategy <i class="bi bi-sun-fill sol"></i> product design <i class="bi bi-sun-fill sol"></i>motion graphic <i class="bi bi-sun-fill sol"></i> art direction</h3>
